# cognivox

./: .env.example  .vsconfig  README.md  build.bat  build_log.txt  build_script.ps1  buildlog.txt  cargo_build_result.txt  check_build.py  check_output.txt  check_results.txt  check_results_final.txt  check_results_final_utf8.txt  check_results_utf8.txt  dev-quick.bat  do_build.ps1  errors.txt  final_check_10.txt  final_check_3.txt  final_check_4.txt  final_check_5.txt  final_check_6.txt  final_check_7.txt  final_check_8.txt  final_check_9.txt  final_check_output.txt  final_final_check_output.txt  generate_docx.ps1  milestone_report.md  package-lock.json  package.json  run_tauri_dev.bat  scale_ui.mjs  tailwind.config.js  update_index.mjs  upscale_check_tmp.txt
.cargo/: config.toml
.claude/: settings.local.json
CODEBASE_INDEX/: 00_OVERVIEW.md  01_FILE_INVENTORY.md  02_CONNECTION_MAP.md  03_FUNCTIONALITY_AUDIT.md  04_ISSUES_AND_FIXES.md  05_AGENT_KNOWLEDGE_BASE.md
ragflow/: emergency_model_fix.py  fix_identifier_format.py
scripts/: export_ecapa_tdnn.py  generate_updater_reports.js  patch_final_tabs.mjs  (+10 more)
src-tauri/: Cargo.toml  audit_results.txt  build_check.txt  build_check2.txt  build_check3.txt  build_check4.txt  build_check5.txt  build_check_latest.txt  cargo_check_err.txt  check_err.txt  check_errors.txt  check_output.txt  check_output_latest.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_capture.rs  gemini_client.rs  google_auth.rs  lib.rs  main.rs  processing_engine.rs  session_manager.rs  speaker_id.rs  whisper_client.rs
(+771 files in other folders)
