[package]
name = "cognivox"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "god_v8_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
anyhow = "1.0"
rubato = "0.14"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.10"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
url = "2.5"
base64 = "0.21"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs", branch = "master" }
hf-hub = { version = "0.3", features = ["tokio"] }
